<resources>
    <string name="app_name">ZhaozhanHuang-GUICalculator</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>

    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_times">x</string>
    <string name="button_over">÷</string>
    <string name="button_dot">.</string>
    <string name="button_equals">=</string>
    <string name="button_sqrt">sqrt</string>

    <string name="ac_hint">AC</string>

    <string name="error_divided_by_zero">0 cannot be the divider. Please try a different number.</string>
    <string name="error_unknown_token_found">This error message should not appear</string>
</resources>