<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <Button
        android:id="@+id/ac_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="25dp"
        app:icon="@drawable/baseline_autorenew_24"
        app:iconSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/expression_text_view"
        android:text="@string/ac_hint"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="161dp" />

    <TextView
        android:id="@+id/expression_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:text=""
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/calculator_grid"
        tools:layout_editor_absoluteX="0dp" />

    <GridLayout
        android:id="@+id/calculator_grid"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:columnCount="5"
        android:rowCount="4">
        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_1"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_2"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_3"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_plus"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/button_times"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_times"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"

            android:text="@string/button_4"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"

            android:text="@string/button_5"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_6"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_minus"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/button_over"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_over"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_7"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_8"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_9"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/button_sqrt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:text="@string/button_sqrt"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:text="@string/button_0"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_dot"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/button_equals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:text="@string/button_equals"
            android:textSize="40sp"/>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>